# webcam-ocr

./: .gitignore  README.md  pyproject.toml
src/webcam_ocr/: __init__.py  cli.py  gui.py  viewer.py
src/webcam_ocr/utils/: __init__.py  camera.py  image.py  ocr.py
